[tool.poetry]
name = "django_huey_test"
version = "0.0.1"
description = "Test repo for using django with huey"
authors = ["Radu Suciu <radusuciu@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.7"
huey = "^2.4.0"
py-redis = "^1.1.0"
psycopg2 = "^2.9.1"
django-extensions = "^3.1.3"
django-huey = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
